--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <head>
 </head>
 <body>
-<a href="mobile_cruse.html">Mobile Cruise</a>
+<a href="mobile_cruise.html">Mobile Cruise</a>
 </body>
 </html>
