Make new tree DBH default to null

--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,7 @@
           treeAddForm.status = previousTree.value.status || 'Live';
           treeAddForm.species = previousTree.value.species || '';
           treeAddForm.count = 1;
-          treeAddForm.dbh = previousTree.value.diameter || null;
+          treeAddForm.dbh = null;
           treeAddForm.bole_diam = previousTree.value.bole_diam || '';
           treeAddForm.form_point = previousTree.value.form_pnt || 4;
         }
