Update field names

--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700">Form Point</label>
-                <input v-model.number="localTree.form_pnt" type="number" step="0.1" placeholder="e.g., 4.5" class="input-field w-20 px-1" required>
+                <input v-model.number="localTree.form_point" type="number" step="0.1" placeholder="e.g., 4.5" class="input-field w-20 px-1" required>
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700">Form Factor</label>
@@ -1191,7 +1191,7 @@
 
         // Get the previous tree record for default values
         const previousTree = computed(() => {
-          return trees.value.length > 0 ? trees.value[trees.value.length - 1] : { form_pnt: { value: 0 } };
+          return trees.value.length > 0 ? trees.value[trees.value.length - 1] : { form_point: { value: 0 } };
         });
 
         // treeAddForm gets default values from previousTree if available
@@ -1202,7 +1202,7 @@
           status: '',
           species: '',
           count: 1,
-          dbh: null,
+          diameter: null,
           bole_diam: '',
           form_point: 4
         });
@@ -1215,9 +1215,9 @@
           treeAddForm.status = previousTree.value.status || 'Live';
           treeAddForm.species = previousTree.value.species || '';
           treeAddForm.count = 1;
-          treeAddForm.dbh = null;
-          treeAddForm.bole_diam = previousTree.value.bole_diam || '';
-          treeAddForm.form_point = previousTree.value.form_pnt || 4;
+          treeAddForm.diameter = null;
+          // treeAddForm.bole_diam = previousTree.value.bole_diam || '';
+          treeAddForm.form_point = previousTree.value.form_point || 4;
         }
         watch([activeTab, trees], () => {
           if (activeTab.value === 'list') resettreeAddForm();
@@ -1312,7 +1312,8 @@
             createdAt: new Date().toISOString(),
             lastUpdated: new Date().toISOString(),
             updatedBy: currentUser.username,
-            ...treeDetails
+            // ...treeDetails
+            bole_diam: previousTree.bole_diam || null
           };
           const id = await db.trees.add(newTree);
           await loadData();
@@ -1360,7 +1361,8 @@
                 status: 'Live',
                 diameter: null,
                 design_code: previousTree.value.design_code || '',
-                form_pnt: previousTree.value.form_pnt || 0,
+                form_point: previousTree.value.form_point || 0,
+                bole_diam: previousTree.value.bole_diam || ''
             }).then(newId => {
                 activeTab.value = 'list';
                 nextTick(() => {
@@ -1417,8 +1419,8 @@
 
         // Function to add a tree using azimuth and distance inputs
         function addTreeByAzimuth() {
-          const { distance, azimuth, design_code, status, species, dbh } = treeAddForm;
-          if (distance === null || azimuth === null || !design_code || !status || !species || dbh === null) return;
+          const { distance, azimuth, design_code, status, count, species, diameter, form_point } = treeAddForm;
+          if (distance === null || azimuth === null || !design_code || !status || !species || diameter === null) return;
 
           const centerX = plotCanvas.value.width / 2;
           const centerY = plotCanvas.value.height / 2;
@@ -1429,7 +1431,7 @@
           const x = centerX + scaledDistance * Math.cos(angleRad);
           const y = centerY - scaledDistance * Math.sin(angleRad);
 
-          createNewTree({ x, y, azimuth, distance, design_code, status, species, diameter: dbh }).then(newId => {
+          createNewTree({ x, y, azimuth, distance, design_code, status, species, diameter, form_point, count }).then(newId => {
               activeTab.value = 'list';
               nextTick(() => {
                   editingTreeId.value = newId;
