--- a/index.html
+++ b/index.html
@@ -793,111 +793,111 @@
                     <tr>
                         <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-8">#</th>
                         <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-10">PF</th>
-                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-14">Sp</th>
+                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-12">Sp</th>
                         <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-14">Stat</th>
-                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-14">DBH</th>
-                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-14">FP</th>
-                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-14">FF</th>
-                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-14">BD</th>
-                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-14">BHT</th>
-                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-14">THT</th>
-                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-14">Age</th>
-                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-14">CP</th>
-                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-14">CR</th>
-                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-14">Vig</th>
+                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-10">DBH</th>
+                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-8">FP</th>
+                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-8">FF</th>
+                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-10">BD</th>
+                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-10">BHT</th>
+                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-10">THT</th>
+                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-10">Age</th>
+                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-12">CP</th>
+                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-10">CR</th>
+                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-10">Vig</th>
                         <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-14">Dmg</th>
-                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-14">Azimuth</th>
-                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-14">Dist</th>
+                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-10">Az</th>
+                        <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-10">Dist</th>
                         <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-30">Notes</th>
                         <th class="compact-th text-left text-xs font-medium text-gray-500 uppercase w-14">Actions</th>
                     </tr>
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-200">
-                    <tr v-for="tree in localTrees" :key="tree.id" @click="startEditing(tree)" class="hover:bg-lime-100 cursor-pointer">
-                        <td class="whitespace-nowrap text-sm w-8">{{ tree.treeNumber }}</td>
-                        <td class="whitespace-nowrap text-sm w-10">
-                            <span v-if="!isEditing(tree.id)">{{ tree.design_code }}</span>
+                    <tr v-for="tree in localTrees" :key="tree.id" @click="startEditing(tree)" class="hover:bg-lime-100 cursor-pointer py-0">
+                        <td class="compact-td whitespace-nowrap text-sm table-input w-8">{{ tree.treeNumber }}</td>
+                        <td class="compact-td whitespace-nowrap text-sm">
+                            <span v-if="!isEditing(tree.id)" class="table-input w-10">{{ tree.design_code }}</span>
                             <select v-else v-model="editingTree.design_code" class="table-input w-10">
                                 <option v-for="val in design_code_list" :key="val" :value="val">{{ val }}</option>
                             </select>
                         </td>
-                        <td class="whitespace-nowrap text-sm">
-                            <span v-if="!isEditing(tree.id)">{{ tree.species }}</span>
-                            <select v-else v-model="editingTree.species" class="table-input w-14">
+                        <td class="compact-td whitespace-nowrap text-sm">
+                            <span v-if="!isEditing(tree.id)" class="table-input w-12">{{ tree.species }}</span>
+                            <select v-else v-model="editingTree.species" class="table-input w-12">
                                 <option v-for="val in species_list" :key="val" :value="val">{{ val }}</option>
                             </select>
                         </td>
-                        <td class="whitespace-nowrap text-sm">
-                            <span v-if="!isEditing(tree.id)">{{ tree.status }}</span>
+                        <td class="compact-td whitespace-nowrap text-sm">
+                            <span v-if="!isEditing(tree.id)" class="table-input w-14">{{ tree.status }}</span>
                             <select v-else v-model="editingTree.status" class="table-input w-14">
                                 <option v-for="val in status_list" :key="val" :value="val">{{ val }}</option>
                             </select>
                         </td>
-                        <td class="compact-td whitespace-nowrap text-sm">
-                            <span v-if="!isEditing(tree.id)">{{ tree.diameter }}</span>
-                            <input v-else v-model.number="editingTree.diameter" type="number" class="table-input w-14">
+                        <td class="compact-td compact-td whitespace-nowrap text-sm">
+                            <span v-if="!isEditing(tree.id)" class="table-input w-10">{{ tree.diameter }}</span>
+                            <input v-else v-model.number="editingTree.diameter" type="number" class="table-input w-10">
                         </td>
-                        <td class="compact-td whitespace-nowrap text-sm">
-                            <span v-if="!isEditing(tree.id)">{{ tree.form_point }}</span>
-                            <input v-else v-model.number="editingTree.form_point" type="number" class="table-input w-14">
+                        <td class="compact-td compact-td whitespace-nowrap text-sm">
+                            <span v-if="!isEditing(tree.id)" class="table-input w-8">{{ tree.form_point }}</span>
+                            <input v-else v-model.number="editingTree.form_point" type="number" class="table-input w-8">
                         </td>
-                        <td class="compact-td whitespace-nowrap text-sm">
-                            <span v-if="!isEditing(tree.id)">{{ tree.form_factor }}</span>
-                            <input v-else v-model.number="editingTree.form_factor" type="number" class="table-input w-14">
+                        <td class="compact-td compact-td whitespace-nowrap text-sm">
+                            <span v-if="!isEditing(tree.id)" class="table-input w-8">{{ tree.form_factor }}</span>
+                            <input v-else v-model.number="editingTree.form_factor" type="number" class="table-input w-8">
                         </td>
-                        <td class="compact-td whitespace-nowrap text-sm">
-                            <span v-if="!isEditing(tree.id)">{{ tree.bole_diam }}</span>
-                            <select v-else v-model="editingTree.bole_diam" class="table-input w-14">
+                        <td class="compact-td compact-td whitespace-nowrap text-sm">
+                            <span v-if="!isEditing(tree.id)" class="table-input w-10">{{ tree.bole_diam }}</span>
+                            <select v-else v-model="editingTree.bole_diam" class="table-input w-10">
                                 <option v-for="val in bole_diam_codes" :key="val" :value="val">{{ val }}</option>
                             </select>
                         </td>
-                        <td class="compact-td whitespace-nowrap text-sm">
-                            <span v-if="!isEditing(tree.id)">{{ tree.bole_height }}</span>
-                            <input v-else v-model.number="editingTree.bole_height" type="number" class="table-input w-14">
+                        <td class="compact-td compact-td whitespace-nowrap text-sm">
+                            <span v-if="!isEditing(tree.id)" class="table-input w-10">{{ tree.bole_height }}</span>
+                            <input v-else v-model.number="editingTree.bole_height" type="number" class="table-input w-10">
                         </td>
                         <td class="compact-td whitespace-nowrap text-sm">
-                            <span v-if="!isEditing(tree.id)">{{ tree.total_height }}</span>
-                            <input v-else v-model.number="editingTree.total_height" type="number" class="table-input w-14">
+                            <span v-if="!isEditing(tree.id)" class="table-input w-10">{{ tree.total_height }}</span>
+                            <input v-else v-model.number="editingTree.total_height" type="number" class="table-input w-10">
                         </td>
                         <td class="compact-td whitespace-nowrap text-sm">
-                            <span v-if="!isEditing(tree.id)">{{ tree.age }}</span>
-                            <input v-else v-model.number="editingTree.age" type="number" class="table-input w-14">
+                            <span v-if="!isEditing(tree.id)" class="table-input w-10">{{ tree.age }}</span>
+                            <input v-else v-model.number="editingTree.age" type="number" class="table-input w-10">
                         </td>
                         <td class="compact-td whitespace-nowrap text-sm">
-                            <span v-if="!isEditing(tree.id)">{{ tree.crown_position }}</span>
+                            <span v-if="!isEditing(tree.id)" class="table-input w-14">{{ tree.crown_position }}</span>
                             <select v-else v-model="editingTree.crown_position" class="table-input w-14">
                                 <option v-for="val in crown_position_list" :key="val" :value="val">{{ val }}</option>
                             </select>
                         </td>
                         <td class="compact-td whitespace-nowrap text-sm">
-                            <span v-if="!isEditing(tree.id)">{{ tree.crown_ratio }}</span>
-                            <select v-else v-model="editingTree.crown_ratio" class="table-input w-14">
+                            <span v-if="!isEditing(tree.id)" class="table-input w-10">{{ tree.crown_ratio }}</span>
+                            <select v-else v-model="editingTree.crown_ratio" class="table-input w-10">
                                 <option v-for="val in crown_ratio_list" :key="val" :value="val">{{ val }}</option>
                             </select>
                         </td>
                         <td class="compact-td whitespace-nowrap text-sm">
-                            <span v-if="!isEditing(tree.id)">{{ tree.vigor }}</span>
-                            <select v-else v-model="editingTree.vigor" class="table-input w-14">
+                            <span v-if="!isEditing(tree.id)" class="table-input w-10">{{ tree.vigor }}</span>
+                            <select v-else v-model="editingTree.vigor" class="table-input w-10">
                                 <option v-for="val in vigor_list" :key="val" :value="val">{{ val }}</option>
                             </select>
                         </td>
                         <td class="compact-td whitespace-nowrap text-sm">
-                            <span v-if="!isEditing(tree.id)">{{ tree.damage }}</span>
+                            <span v-if="!isEditing(tree.id)" class="table-input w-14">{{ tree.damage }}</span>
                             <select v-else v-model="editingTree.damage" class="table-input w-14">
                                 <option v-for="val in damage_list" :key="val" :value="val">{{ val }}</option>
                             </select>
                         </td>
                         <td class="compact-td whitespace-nowrap text-sm">
-                            <span v-if="!isEditing(tree.id)">{{ tree.azimuth }}</span>
-                            <input v-else v-model.number="editingTree.azimuth" type="number" class="table-input w-14">
+                            <span v-if="!isEditing(tree.id)" class="table-input w-10">{{ tree.azimuth }}</span>
+                            <input v-else v-model.number="editingTree.azimuth" type="number" class="table-input w-10">
                         </td>
                         <td class="compact-td whitespace-nowrap text-sm">
-                            <span v-if="!isEditing(tree.id)">{{ tree.distance }}</span>
-                            <input v-else v-model.number="editingTree.distance" type="number" class="table-input w-14">
+                            <span v-if="!isEditing(tree.id)" class="table-input w-10">{{ tree.distance }}</span>
+                            <input v-else v-model.number="editingTree.distance" type="number" class="table-input w-10">
                         </td>
-                        <td class="compact-td whitespace-nowrap text-sm">
-                            <span v-if="!isEditing(tree.id)">{{ tree.notes }}</span>
-                            <input v-else v-model.number="editingTree.notes" type="text" class="table-input w-30">
+                        <td class="compact-td text-sm max-w-30 truncate">
+                            <span v-if="!isEditing(tree.id)" class="table-input">{{ tree.notes }}</span>
+                            <input v-else v-model.number="editingTree.notes" type="text" class="table-input">
                         </td>
                         <td class="compact-td whitespace-nowrap text-sm font-medium">
                             <div v-if="isEditing(tree.id)" class="flex items-center space-x-2">
